--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 sudo: false
+language: python
 python:
   - "2.7"
   - "3.5"
-os:
-  - linux
-  - osx
+# TODO(patrick): Test on OSX, python is not supported on travis yet
+# os:
+  # - linux
+  # - osx
 cache:
   pip: true
 script:
