--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,16 @@ before_script:
 
 # Use the SIGOPT_API_TOKEN environment variable to set the API token.
 # Be careful to not expose it in the travis logs
+# If the example requires an existing experiment ID, use
+# ./test/with_new_experiment and it will replace NEW_EXPERIMENT_ID with
+# a newly created valid experiment
 script:
   - ./test/run_python classifier classifier_tuner.py \
       --client-token $SIGOPT_API_TOKEN \
       --num-sigopt-suggestions 2 \
       --num-random-searches 1 \
       --grid-search-width 1
+  - ./test/with_new_experiment ./test/run_python other-languages other_languages.py \
+      --command "../test/other_languages_tester" \
+      --client_token $SIGOPT_API_TOKEN \
+      --experiment_id NEW_EXPERIMENT_ID
