--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ addons:
       - 'python-numpy'
       - 'python-scipy'
 
-before_script:
+install:
   - python -c "import numpy; print(numpy.__version__)"
   - python -c "import scipy; print(scipy.__version__)"
 
