--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
   # - linux
   # - osx
 cache:
-  pip: true
+  pip: false
 
 addons:
   apt:
@@ -20,7 +20,7 @@ addons:
 
 install:
   - python -c "import numpy; print(numpy.__version__)"
-  - python -c "import scipy; print(scipy.__version__)"
+  # - python -c "import scipy; print(scipy.__version__)"
 
 # Use the SIGOPT_API_TOKEN environment variable to set the API token.
 # Be careful to not expose it in the travis logs
