--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,6 @@ language: python
 python:
   - "2.7"
   - "3.5"
-# TODO(patrick): Test on OSX, python is not supported on travis yet
-# os:
-  # - linux
-  # - osx
 cache:
   pip: false
 
@@ -19,8 +15,8 @@ addons:
       - 'python-scipy'
 
 install:
+  - pip install sigopt
   - python -c "import numpy; print(numpy.__version__)"
-  # - python -c "import scipy; print(scipy.__version__)"
 
 # Use the SIGOPT_API_TOKEN environment variable to set the API token.
 # Be careful to not expose it in the travis logs
@@ -28,12 +24,5 @@ install:
 # ./test/with_new_experiment and it will replace NEW_EXPERIMENT_ID with
 # a newly created valid experiment
 script:
-  - ./test/run_python classifier classifier_tuner.py \
-      --client-token $SIGOPT_API_TOKEN \
-      --num-sigopt-suggestions 2 \
-      --num-random-searches 1 \
-      --grid-search-width 1
-  - ./test/with_new_experiment ./test/run_python other-languages other_languages.py \
-      --command "../test/other_languages_tester" \
-      --client_token $SIGOPT_API_TOKEN \
-      --experiment_id NEW_EXPERIMENT_ID
+  - ./test/run_python classifier classifier_tuner.py --client-token $SIGOPT_API_TOKEN --num-sigopt-suggestions 2 --num-random-searches 1 --grid-search-width 1
+  - ./test/with_new_experiment ./test/run_python other-languages other_languages.py --command "../test/other_languages_tester" --client_token $SIGOPT_API_TOKEN --experiment_id NEW_EXPERIMENT_ID
