--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,6 @@ install:
 script:
   - ./test/run_python classifier classifier_tuner.py --client-token $SIGOPT_API_TOKEN --num-sigopt-suggestions 2 --num-random-searches 1 --grid-search-width 1
   - ./test/with_new_experiment ./test/run_python other-languages other_languages.py --command "../test/other_languages_tester" --client_token $SIGOPT_API_TOKEN --experiment_id NEW_EXPERIMENT_ID
+  - ./test/with_new_experiment ./test/run_python parallel parallel.py --client_token $SIGOPT_API_TOKEN --experiment_id NEW_EXPERIMENT_ID
   - cd java && mvn compile && mvn exec:java -Dexec.mainClass="com.example.App" -Dexec.cleanupDaemonThreads="false" -Dexec.args="--client_token $SIGOPT_API_TOKEN"
 
