--- a/java/pom.xml
+++ b/java/pom.xml
@@ -45,4 +45,8 @@
     </build>
    </profile>
   </profiles>
+  <properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+  </properties>
 </project>
