--- a/random-forest/java/pom.xml
+++ b/random-forest/java/pom.xml
@@ -50,4 +50,8 @@
     </build>
    </profile>
   </profiles>
+  <properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+  </properties>
 </project>
