--- a/orchestrate/spark_example/orchestrate.yml
+++ b/orchestrate/spark_example/orchestrate.yml
@@ -17,13 +17,13 @@ optimization:
   metrics:
     - name: accuracy
   parameters:  # Fill in parameters to optimize
-    - name: l1_ratio
+    - name: rand_num
       type: double
       bounds:
         min: 0
         max: 1.0
   parallel_bandwidth: 1
-  observation_budget: 1
+  observation_budget: 10
 aws:
   ecr:
     repository: orchestrate/spark-example
