--- a/orchestrate/spark_example/orchestrate.yml
+++ b/orchestrate/spark_example/orchestrate.yml
@@ -17,13 +17,18 @@ optimization:
   metrics:
     - name: accuracy
   parameters:  # Fill in parameters to optimize
-    - name: rand_num
+    - name: x
+      type: double
+      bounds:
+        min: 0
+        max: 1.0
+    - name: y
       type: double
       bounds:
         min: 0
         max: 1.0
   parallel_bandwidth: 1
-  observation_budget: 10
+  observation_budget: 1
 aws:
   ecr:
     repository: orchestrate/spark-example
