--- a/orchestrate/spark_example/orchestrate.yml
+++ b/orchestrate/spark_example/orchestrate.yml
@@ -4,10 +4,8 @@ install:
   -  wget --quiet http://apache.claz.org/spark/spark-2.4.0/spark-2.4.0-bin-hadoop2.7.tgz
   -  tar -xvf spark-2.4.0-bin-hadoop2.7.tgz
   -  rm spark-2.4.0-bin-hadoop2.7.tgz
-  -  apt-get update
-  -  apt-get install -y default-jdk
-  -  export SPARK_MASTER_HOST=localhost
-  -  export SPARK_MASTER_PORT=7077
+  -  apt-get update && apt-get install -y default-jdk
+  -  export SPARK_MASTER_HOST=localhost SPARK_MASTER_PORT=7077
   -  spark-2.4.0-bin-hadoop2.7/sbin/start-master.sh
   -  spark-2.4.0-bin-hadoop2.7/sbin/start-slave.sh spark://localhost:7077
 run:
