single run command

--- a/orchestrate/apache_spark/orchestrate.yml
+++ b/orchestrate/apache_spark/orchestrate.yml
@@ -6,8 +6,7 @@ install:
   -  rm spark-2.4.0-bin-hadoop2.7.tgz
   -  apt-get update
   -  apt-get install -y default-jdk
-run:
-  -  spark-2.4.0-bin-hadoop2.7/bin/spark-submit model.py
+run: spark-2.4.0-bin-hadoop2.7/bin/spark-submit model.py
 optimization:
   metrics:
     - name: accuracy
