--- a/orchestrate/keras_mnist/orchestrate-gpu.yml
+++ b/orchestrate/keras_mnist/orchestrate-gpu.yml
@@ -2,8 +2,7 @@ name: Orchestrate Keras MNIST Example (GPU)
 framework: keras
 resources_per_model:
   gpus: 1
-run:
-  -  python model.py
+run: python model.py
 optimization:
   metrics:
     - name: accuracy
