--- a/orchestrate/mxnet_mnist/orchestrate.yml
+++ b/orchestrate/mxnet_mnist/orchestrate.yml
@@ -2,9 +2,7 @@ name: Orchestrate MXNet MNIST Example
 framework: python
 install:
   - pip install -r requirements.txt
-run:
-  - bash download_data.sh
-  - python model.py
+run: bash run.sh
 optimization:
   metrics:
     - name: accuracy
