--- a/orchestrate/tensorflow_mnist/orchestrate-gpu.yml
+++ b/orchestrate/tensorflow_mnist/orchestrate-gpu.yml
@@ -2,8 +2,7 @@ name: Orchestrate Tensorflow MNIST Example (GPU)
 resources_per_model:
   gpus: 1
 framework: tensorflow
-run:
-  -  python model.py
+run: python model.py
 optimization:
   metrics:
     - name: accuracy
