--- a/orchestrate/tensorflow_mnist/orchestrate.yml
+++ b/orchestrate/tensorflow_mnist/orchestrate.yml
@@ -1,8 +1,7 @@
 name: Orchestrate Tensorflow MNIST Example
 install:
   -  pip install -r requirements.txt
-run:
-  -  python model.py
+run: python model.py
 optimization:
   metrics:
     - name: accuracy
