--- a/orchestrate/apache_spark/orchestrate.yml
+++ b/orchestrate/apache_spark/orchestrate.yml
@@ -23,4 +23,4 @@ optimization:
         max: 1.0
   parallel_bandwidth: 1
   observation_budget: 1
-repository: orchestrate/spark-example
+image: orchestrate/spark-example
