--- a/orchestrate/keras_mnist/orchestrate-gpu.yml
+++ b/orchestrate/keras_mnist/orchestrate-gpu.yml
@@ -45,4 +45,4 @@ optimization:
         max: 20
   parallel_bandwidth: 4
   observation_budget: 200
-repository: orchestrate/keras-mnist-gpu
+image: orchestrate/keras-mnist-gpu
