--- a/orchestrate/tensorflow_mnist/orchestrate-gpu.yml
+++ b/orchestrate/tensorflow_mnist/orchestrate-gpu.yml
@@ -88,4 +88,4 @@ optimization:
         max: 10
   parallel_bandwidth: 4
   observation_budget: 200
-repository: orchestrate/tensorflow-mnist-gpu
+image: orchestrate/tensorflow-mnist-gpu
