--- a/orchestrate/tensorflow_mnist/orchestrate.yml
+++ b/orchestrate/tensorflow_mnist/orchestrate.yml
@@ -87,4 +87,4 @@ optimization:
         max: 10
   parallel_bandwidth: 4
   observation_budget: 200
-repository: orchestrate/tensorflow-mnist
+image: orchestrate/tensorflow-mnist
