--- a/orchestrate/xgboost/orchestrate.yml
+++ b/orchestrate/xgboost/orchestrate.yml
@@ -29,4 +29,4 @@ optimization:
       type: double
   parallel_bandwidth: 2
   observation_budget: 60
-repository: orchestrate/xgboost
+image: orchestrate/xgboost
