run command as single string

--- a/orchestrate/clusters/cpu_cluster.yml
+++ b/orchestrate/clusters/cpu_cluster.yml
@@ -1,6 +1,6 @@
 provider: aws
-cluster_name: cpu-cluster
+cluster_name: taylor-thresholds-cluster
 cpu:
-  min_nodes: 1
+  min_nodes: 4
   max_nodes: 4
   instance_type: c5.xlarge
