--- a/orchestrate/keras_mnist/orchestrate.yml
+++ b/orchestrate/keras_mnist/orchestrate.yml
@@ -2,8 +2,7 @@ name: Orchestrate Keras MNIST Example
 framework: python
 install:
   -  pip install tensorflow==1.9.0 keras==2.2.2
-run:
-  -  python model.py
+run: python model.py
 optimization:
   metrics:
     - name: accuracy
@@ -46,4 +45,4 @@ optimization:
         max: 20
   parallel_bandwidth: 4
   observation_budget: 200
-repository: orchestrate/keras-mnist
+image: orchestrate/keras-mnist
