--- a/bert-distillation-multimetric/raytune_wrapper/ray_launch_config.yaml
+++ b/bert-distillation-multimetric/raytune_wrapper/ray_launch_config.yaml
@@ -4,15 +4,14 @@ cluster_name: ray-cluster
 # The minimum number of workers nodes to launch in addition to the head
 # node. This number should be >= 0.
 min_workers: 0
-
 # The maximum number of workers nodes to launch in addition to the head
 # node. This takes precedence over min_workers.
-max_workers: 19
+max_workers: 1
 
 # The initial number of worker nodes to launch in addition to the head
 # node. When the cluster is first brought up (or when it is refreshed with a
 # subsequent `ray up`) this number of nodes will be started.
-initial_workers: 19
+initial_workers: 1
 
 # Whether or not to autoscale aggressively. If this is enabled, if at any point
 #   we would start more workers, we start at least enough to bring us to
@@ -71,7 +70,7 @@ auth:
 # http://boto3.readthedocs.io/en/latest/reference/services/ec2.html#EC2.ServiceResource.create_instances
 head_node:
     InstanceType: p3.2xlarge
-    ImageId: ami-0b5664a1c8c6b5a72 # custom deep learning image
+    ImageId: ami-083318c87cff4c818 # custom deep learning image
 
 # Provider-specific config for worker nodes, e.g. instance type. By default
 # Ray will auto-configure unspecified fields such as SubnetId and KeyName.
@@ -79,7 +78,7 @@ head_node:
 # http://boto3.readthedocs.io/en/latest/reference/services/ec2.html#EC2.ServiceResource.create_instances
 worker_nodes:
     InstanceType: p3.2xlarge
-    ImageId: ami-0b5664a1c8c6b5a72 # custom deep learning image
+    ImageId: ami-083318c87cff4c818 # custom deep learning image
 
     # Additional options in the boto docs.
     IamInstanceProfile:
@@ -99,7 +98,9 @@ setup_commands: []
   
 # Custom commands that will be run on the head node after common setup.
 head_setup_commands:
-    - sudo pip install boto3==1.4.8  # 1.4.8 adds InstanceMarketOptions
+    - sudo service redis stop
+    - sudo pip3 install ray==0.8.4  # 1.4.8 adds InstanceMarketOptions
+    - sudo pip3 install boto3==1.4.8  # 1.4.8 adds InstanceMarketOptions
 
 # Custom commands that will be run on worker nodes after common setup.
 worker_setup_commands: []
